[package]
name = "clipboard-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = "2.15.2"
napi-derive = "2.15.3"
encoding = "0.2.33"

[dependencies.windows]
version = "0.53.0"
features = ["Win32_System_DataExchange", "Win32_Foundation", "Win32_System_Memory"]

[build-dependencies]
napi-build = "2.1.2"